[gd_scene load_steps=5 format=3 uid="uid://b3f0ybtchurne"]

[ext_resource type="Texture2D" uid="uid://ddmw5rh0xflch" path="res://common/board/art/card.png" id="1_fkl5p"]
[ext_resource type="Script" uid="uid://bxa66n3ye2t6x" path="res://common/screens/ability_selection_screen/ability_selection_card.gd" id="2_wfecc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wfecc"]
texture = ExtResource("1_fkl5p")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fkl5p"]
texture = ExtResource("1_fkl5p")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
modulate_color = Color(0.48677072, 0.48677072, 0.48677072, 0.90000004)

[node name="AbilitySelectionCard" type="Button"]
custom_minimum_size = Vector2(128, 192)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -96.0
offset_right = 64.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_wfecc")
theme_override_styles/pressed = SubResource("StyleBoxTexture_wfecc")
theme_override_styles/hover = SubResource("StyleBoxTexture_wfecc")
theme_override_styles/disabled = SubResource("StyleBoxTexture_fkl5p")
theme_override_styles/focus = SubResource("StyleBoxTexture_wfecc")
script = ExtResource("2_wfecc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="AbilityNameLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "Ability Name"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="AbilityDescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
bbcode_enabled = true
text = "This is the ability description for this ability"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
